[package]
name = "cancel-this"
version = "0.1.0"
edition = "2024"

[features]
# Allows using Ctrlc trigger
ctrlc = ["dep:ctrlc"]
# Allows using PyO3 trigger
pyo3 = ["dep:pyo3"]
# Allows monitoring the regularity of cancellation checks
liveness = ["dep:atomic-time"]

[dependencies]
dyn-clone = "1.0.20"
log = "0.4.28"
lazy_static = "1.5.0"
ctrlc = { version = "3.5.0", optional = true }
pyo3 = { version = "0.26.0", optional = true }
atomic-time = { version = "0.1.5", optional = true }

[dev-dependencies]
libc = "0.2.176"
