[package]
name = "cancel-this"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
rust-version = "1.88.0"
description = "A user-friendly cooperative cancellation and liveness monitoring library."
homepage = "https://github.com/daemontus/cancel-this"
repository = "https://github.com/daemontus/cancel-this"
readme = "README.md"
keywords = ["cancel", "cancellation", "liveness", "cooperative"]
license = "MIT"

[features]
# Allows using Ctrlc trigger
ctrlc = ["dep:ctrlc"]
# Allows using PyO3 trigger
pyo3 = ["dep:pyo3"]
# Allows monitoring the regularity of cancellation checks
liveness = []

[dependencies]
dyn-clone = "1.0.20"
log = "0.4.28"
lazy_static = "1.5.0"
ctrlc = { version = "3.5.0", optional = true }
pyo3 = { version = "0.26.0", optional = true }

[dev-dependencies]
libc = "0.2.176"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time"] }

[[bench]]
name = "bench_hash"
harness = false