[package]
name = "cancel-this"
version = "0.4.0"
edition = "2024"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
rust-version = "1.88.0"
description = "A user-friendly cooperative cancellation and liveness monitoring library."
homepage = "https://github.com/daemontus/cancel-this"
repository = "https://github.com/daemontus/cancel-this"
readme = "README.md"
keywords = ["cancel", "cancellation", "liveness", "cooperative"]
license = "MIT"

[features]
# Allows using Ctrlc trigger
ctrlc = ["dep:ctrlc"]
# Allows using PyO3 trigger
pyo3 = ["dep:pyo3"]
# Allow memory-limit trigger
memory = ["dep:memory-stats"]
# Allows monitoring the regularity of cancellation checks
liveness = []

[dependencies]
dyn-clone = "1.0"
log = "0.4"
lazy_static = "1.5"
ctrlc = { version = "3.5.1", optional = true }
pyo3 = { version = "0.27", optional = true }
# The "always_use_statm" feature should prioritize speed over accuracy.
memory-stats = { version = "1.2", optional = true, features = ["always_use_statm"] }

[dev-dependencies]
libc = "0.2.176"
env_logger = "0.11"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "time"] }

[[bench]]
name = "bench_hash"
harness = false