[package]
name = "example_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "example_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
cancel-this = { path = "..", features = ["pyo3", "liveness"] }